fixed layout bug in FAQs [deploy]

--- a/static/css/layouts/faqs.css
+++ b/static/css/layouts/faqs.css
@@ -1,6 +1,6 @@
 .wrapper {
 	grid-template-columns: 100%;
-	grid-template-rows: 80px auto auto;
+	grid-template-rows: auto auto auto;
 	grid-template-areas:
 		"header"
 		"accordion"
@@ -16,7 +16,7 @@ section.faqs {
 	justify-content: flex-start;
 	padding-left: 64px;
 	padding-right: 80px;
-	padding-top: 16px;
+	padding-top: 10px;
 	padding-bottom: 32px;
 	/* align-items: flex-end; */
 	animation: fadein 1.15s;
@@ -91,11 +91,17 @@ section.faqs {
 		/* padding-top: 80px; */
 		/* align-items: center; */
 	}
+	.wrapper {
+		grid-template-rows: 80px auto auto;
+	}
 }
 /* ----------- 320-WIDTH */
 @media only screen and (max-width: 599px) {
 	section.faqs {
 		/* padding-top: 56px; */
+	}
+	.wrapper {
+		grid-template-rows: 60px auto auto;
 	}
 	.accordion {
 		font-size: 12px;
